# NoweRep

./: .appveyor.yml  .travis.yml
lab1/doublebasepalindromes/: DoubleBasePalindromes.cpp  DoubleBasePalindromes.h  main.cpp
lab1/factorial/: Factorial.cpp  Factorial.h  main.cpp
lab1/multiplicationtable/: MultiplicationTable.cpp  MultiplicationTable.h  main.cpp
lab1/palindrome/: Palindrome.cpp  Palindrome.h  main.cpp
lab1/reversestring/: ReverseString.cpp  ReverseString.h  main.cpp
lab10/academiascheduler/: Scheduler.cpp  Scheduler.h  main.cpp
lab10/algo/: Algo.cpp  Algo.h  CMakeLists.txt  main.cpp
lab11/: CMakeLists.txt
lab11/Logger/: Logger.cpp  Logger.h  main.cpp
lab11/factorymethod/: FactoryMethod.cpp  FactoryMethod.h  main.cpp
lab12/: CMakeLists.txt
lab12/academiasequentialgenerator/: SequentialGenerator.cpp  SequentialGenerator.h  main.cpp
lab12/academiateacherhash/: TeacherHash.cpp  TeacherHash.h  main.cpp
lab12/timerecorder/: TimeRecorder.cpp  TimeRecorder.h  main.cpp
lab12/tree/: Tree.cpp  Tree.h  main.cpp
lab12/treeiterators/: CMakeLists.txt  TreeIterators.cpp  TreeIterators.h  main.cpp
lab13/arabicroman/: ArabicRoman.cpp  ArabicRoman.h  main.cpp
lab2/array2d/: Array2D.cpp  Array2D.h  main.cpp
lab2/greatestproduct/: GreatestProduct.cpp  GreatestProduct.h  main.cpp
lab2/polybius/: Polybius.cpp  Polybius.h  main.cpp
lab2/simpleforwardlist/: SimpleForwardList.cpp  SimpleForwardList.h  main.cpp
lab2/xorcypherbreaker/: main.cpp  (+2 more)
lab7/: CMakeLists.txt
lab8/: CMakeLists.txt
lab9/: CMakeLists.txt
tests/: CMakeLists.txt
(+82 files in other folders)
